2004-05-28  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: retry FEAT after login on 503 (invalid sequence of commands).

2004-05-27  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: assume SSCN is supported without FEAT.

2004-05-26  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopyFtp.cc, FileCopyFtp.h: vary passive_ssl_connect to find
	  suitable combination of pasv/sscn.
	* ftpclass.cc, ftpclass.h: (copy_ssl_connect) new member; clean up
	  prot and sscn modes choice; don't disconnect on pasv and port errors.
	* resource.cc: (ftp:fxp-passive-sscn) new setting to choose initial
	  sscn mode of passive end of fxp.

2004-05-25  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: drop eof flag if transfer returns error code after
	  data connection is closed.

2004-05-22  Alexander V. Lukyanov <lav@yars.free.net>

	* resource.cc: increase sftp:max-packets-in-flight to 8.

2004-05-21  Alexander V. Lukyanov <lav@yars.free.net>

	* SMTask.cc, SMTask.h: get rid of static sched_scan; don't Merge empty
	  PollVec-s.
	* PollVec.h: (IsEmpty) new method.
	* SFtp.cc, Fish.cc: don't return MOVED if recv_buf contains data and
	  was not suspended (reduces cpu usage).
	* Http.cc: check if buffer was suspended before Resume.

2004-05-20  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: SSCN support added.
	* getdate.y: remove ^L as it confuses some broken compilers.
	* Speedometer.cc: don't Add(0) more often than 10 times a second
	  (reduces cpu usage).

2004-05-18  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopyFtp.cc, FileCopyFtp.h: protect FXP if ssl-protect-fxp is
	  true for any of the two servers; try to turn off protection
	  if it fails.
	* ftpclass.cc, ftpclass.h: (copy_protect) new member.
	* resource.cc: ftp:ssl-protect-fxp can now have a closure.

2004-05-17  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: wait until LANG/OPTS UTF8 complete before sending