@@ -1,6 +1,8 @@
 2004-05-28  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* ftpclass.cc: retry FEAT after login on 503 (invalid sequence of commands).
+	* Resolver.cc: fill sa_len if present.
+	* Http.cc, NetAccess.cc, ResMgr.cc, misc.cc: new DECL tests and defines.
 
 2004-05-27  Alexander V. Lukyanov <lav@yars.free.net>
 
